lab3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> blocks
Rule 2     blocks -> blocks block
Rule 3     blocks -> <empty>
Rule 4     block -> declaration
Rule 5     block -> fundef
Rule 6     block -> instruction
Rule 7     declarations -> declarations declaration
Rule 8     declarations -> <empty>
Rule 9     declaration -> TYPE inits ;
Rule 10    declaration -> error ;
Rule 11    inits -> inits , init
Rule 12    inits -> init
Rule 13    init -> ID = expression
Rule 14    instructions -> instructions instruction
Rule 15    instructions -> instruction
Rule 16    instruction -> print_instr
Rule 17    instruction -> labeled_instr
Rule 18    instruction -> assignment
Rule 19    instruction -> choice_instr
Rule 20    instruction -> while_instr
Rule 21    instruction -> repeat_instr
Rule 22    instruction -> return_instr
Rule 23    instruction -> break_instr
Rule 24    instruction -> continue_instr
Rule 25    instruction -> compound_instr
Rule 26    instruction -> expression ;
Rule 27    print_instr -> PRINT expr_list ;
Rule 28    print_instr -> PRINT error ;
Rule 29    labeled_instr -> ID : instruction
Rule 30    assignment -> ID = expression ;
Rule 31    choice_instr -> IF ( condition ) instruction
Rule 32    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 33    choice_instr -> IF ( error ) instruction
Rule 34    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 35    while_instr -> WHILE ( condition ) instruction
Rule 36    while_instr -> WHILE ( error ) instruction
Rule 37    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 38    return_instr -> RETURN expression ;
Rule 39    continue_instr -> CONTINUE ;
Rule 40    break_instr -> BREAK ;
Rule 41    compound_instr -> { declarations instructions }
Rule 42    condition -> expression
Rule 43    const -> INTEGER
Rule 44    const -> FLOAT
Rule 45    const -> STRING
Rule 46    expression -> ID
Rule 47    expression -> const
Rule 48    expression -> expression + expression
Rule 49    expression -> expression - expression
Rule 50    expression -> expression * expression
Rule 51    expression -> expression / expression
Rule 52    expression -> expression % expression
Rule 53    expression -> expression | expression
Rule 54    expression -> expression & expression
Rule 55    expression -> expression ^ expression
Rule 56    expression -> expression AND expression
Rule 57    expression -> expression OR expression
Rule 58    expression -> expression SHL expression
Rule 59    expression -> expression SHR expression
Rule 60    expression -> expression EQ expression
Rule 61    expression -> expression NEQ expression
Rule 62    expression -> expression > expression
Rule 63    expression -> expression < expression
Rule 64    expression -> expression LE expression
Rule 65    expression -> expression GE expression
Rule 66    expression -> ( expression )
Rule 67    expression -> ( error )
Rule 68    expression -> ID ( expr_list_or_empty )
Rule 69    expression -> ID ( error )
Rule 70    expr_list_or_empty -> expr_list
Rule 71    expr_list_or_empty -> <empty>
Rule 72    expr_list -> expr_list , expression
Rule 73    expr_list -> expression
Rule 74    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 75    args_list_or_empty -> args_list
Rule 76    args_list_or_empty -> <empty>
Rule 77    args_list -> args_list , arg
Rule 78    args_list -> arg
Rule 79    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 52
&                    : 54
(                    : 31 32 33 34 35 36 66 67 68 69 74
)                    : 31 32 33 34 35 36 66 67 68 69 74
*                    : 50
+                    : 48
,                    : 11 72 77
-                    : 49
/                    : 51
:                    : 29
;                    : 9 10 26 27 28 30 37 38 39 40
<                    : 63
=                    : 13 30
>                    : 62
AND                  : 56
BREAK                : 40
CONTINUE             : 39
ELSE                 : 32 34
EQ                   : 60
FLOAT                : 44
GE                   : 65
ID                   : 13 29 30 46 68 69 74 79
IF                   : 31 32 33 34
INTEGER              : 43
LE                   : 64
NEQ                  : 61
OR                   : 57
PRINT                : 27 28
REPEAT               : 37
RETURN               : 38
SHL                  : 58
SHR                  : 59
STRING               : 45
TYPE                 : 9 74 79
UNTIL                : 37
WHILE                : 35 36
^                    : 55
error                : 10 28 33 34 36 67 69
{                    : 41
|                    : 53
}                    : 41

Nonterminals, with rules where they appear

arg                  : 77 78
args_list            : 75 77
args_list_or_empty   : 74
assignment           : 18
block                : 2
blocks               : 1 2
break_instr          : 23
choice_instr         : 19
compound_instr       : 25 74
condition            : 31 32 35 37
const                : 47
continue_instr       : 24
declaration          : 4 7
declarations         : 7 41
expr_list            : 27 70 72
expr_list_or_empty   : 68
expression           : 13 26 30 38 42 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 72 73
fundef               : 5
init                 : 11 12
inits                : 9 11
instruction          : 6 14 15 29 31 32 32 33 34 34 35 36
instructions         : 14 37 41
labeled_instr        : 17
print_instr          : 16
program              : 0
repeat_instr         : 21
return_instr         : 22
while_instr          : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . blocks
    (2) blocks -> . blocks block
    (3) blocks -> .

    TYPE            reduce using rule 3 (blocks -> .)
    error           reduce using rule 3 (blocks -> .)
    PRINT           reduce using rule 3 (blocks -> .)
    ID              reduce using rule 3 (blocks -> .)
    IF              reduce using rule 3 (blocks -> .)
    WHILE           reduce using rule 3 (blocks -> .)
    REPEAT          reduce using rule 3 (blocks -> .)
    RETURN          reduce using rule 3 (blocks -> .)
    BREAK           reduce using rule 3 (blocks -> .)
    CONTINUE        reduce using rule 3 (blocks -> .)
    {               reduce using rule 3 (blocks -> .)
    (               reduce using rule 3 (blocks -> .)
    INTEGER         reduce using rule 3 (blocks -> .)
    FLOAT           reduce using rule 3 (blocks -> .)
    STRING          reduce using rule 3 (blocks -> .)
    $end            reduce using rule 3 (blocks -> .)

    blocks                         shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> blocks .
    (2) blocks -> blocks . block
    (4) block -> . declaration
    (5) block -> . fundef
    (6) block -> . instruction
    (9) declaration -> . TYPE inits ;
    (10) declaration -> . error ;
    (74) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (16) instruction -> . print_instr
    (17) instruction -> . labeled_instr
    (18) instruction -> . assignment
    (19) instruction -> . choice_instr
    (20) instruction -> . while_instr
    (21) instruction -> . repeat_instr
    (22) instruction -> . return_instr
    (23) instruction -> . break_instr
    (24) instruction -> . continue_instr
    (25) instruction -> . compound_instr
    (26) instruction -> . expression ;
    (27) print_instr -> . PRINT expr_list ;
    (28) print_instr -> . PRINT error ;
    (29) labeled_instr -> . ID : instruction
    (30) assignment -> . ID = expression ;
    (31) choice_instr -> . IF ( condition ) instruction
    (32) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (33) choice_instr -> . IF ( error ) instruction
    (34) choice_instr -> . IF ( error ) instruction ELSE instruction
    (35) while_instr -> . WHILE ( condition ) instruction
    (36) while_instr -> . WHILE ( error ) instruction
    (37) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (38) return_instr -> . RETURN expression ;
    (40) break_instr -> . BREAK ;
    (39) continue_instr -> . CONTINUE ;
    (41) compound_instr -> . { declarations instructions }
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    $end            reduce using rule 1 (program -> blocks .)
    TYPE            shift and go to state 5
    error           shift and go to state 15
    PRINT           shift and go to state 18
    ID              shift and go to state 14
    IF              shift and go to state 25
    WHILE           shift and go to state 7
    REPEAT          shift and go to state 4
    RETURN          shift and go to state 21
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 29
    {               shift and go to state 13
    (               shift and go to state 19
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 10
    STRING          shift and go to state 30

    continue_instr                 shift and go to state 26
    const                          shift and go to state 6
    break_instr                    shift and go to state 8
    expression                     shift and go to state 9
    while_instr                    shift and go to state 22
    instruction                    shift and go to state 12
    return_instr                   shift and go to state 23
    fundef                         shift and go to state 11
    print_instr                    shift and go to state 20
    choice_instr                   shift and go to state 27
    labeled_instr                  shift and go to state 28
    declaration                    shift and go to state 3
    assignment                     shift and go to state 24
    compound_instr                 shift and go to state 32
    block                          shift and go to state 17
    repeat_instr                   shift and go to state 33

state 2

    (0) S' -> program .



state 3

    (4) block -> declaration .

    TYPE            reduce using rule 4 (block -> declaration .)
    error           reduce using rule 4 (block -> declaration .)
    PRINT           reduce using rule 4 (block -> declaration .)
    ID              reduce using rule 4 (block -> declaration .)
    IF              reduce using rule 4 (block -> declaration .)
    WHILE           reduce using rule 4 (block -> declaration .)
    REPEAT          reduce using rule 4 (block -> declaration .)
    RETURN          reduce using rule 4 (block -> declaration .)
    BREAK           reduce using rule 4 (block -> declaration .)
    CONTINUE        reduce using rule 4 (block -> declaration .)
    {               reduce using rule 4 (block -> declaration .)
    (               reduce using rule 4 (block -> declaration .)
    INTEGER         reduce using rule 4 (block -> declaration .)
    FLOAT           reduce using rule 4 (block -> declaration .)
    STRING          reduce using rule 4 (block -> declaration .)
    $end            reduce using rule 4 (block -> declaration .)


state 4

    (37) repeat_instr -> REPEAT . instructions UNTIL condition ;
    (14) instructions -> . instructions instruction
    (15) instructions -> . instruction
    (16) instruction -> . print_instr
    (17) instruction -> . labeled_instr
    (18) instruction -> . assignment
    (19) instruction -> . choice_instr
    (20) instruction -> . while_instr
    (21) instruction -> . repeat_instr
    (22) instruction -> . return_instr
    (23) instruction -> . break_instr
    (24) instruction -> . continue_instr
    (25) instruction -> . compound_instr
    (26) instruction -> . expression ;
    (27) print_instr -> . PRINT expr_list ;
    (28) print_instr -> . PRINT error ;
    (29) labeled_instr -> . ID : instruction
    (30) assignment -> . ID = expression ;
    (31) choice_instr -> . IF ( condition ) instruction
    (32) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (33) choice_instr -> . IF ( error ) instruction
    (34) choice_instr -> . IF ( error ) instruction ELSE instruction
    (35) while_instr -> . WHILE ( condition ) instruction
    (36) while_instr -> . WHILE ( error ) instruction
    (37) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (38) return_instr -> . RETURN expression ;
    (40) break_instr -> . BREAK ;
    (39) continue_instr -> . CONTINUE ;
    (41) compound_instr -> . { declarations instructions }
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    PRINT           shift and go to state 18
    ID              shift and go to state 14
    IF              shift and go to state 25
    WHILE           shift and go to state 7
    REPEAT          shift and go to state 4
    RETURN          shift and go to state 21
    BREAK           shift and go to state 16
    CONTINUE        shift and go to state 29
    {               shift and go to state 13
    (               shift and go to state 19
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 10
    STRING          shift and go to state 30

    assignment                     shift and go to state 24
    print_instr                    shift and go to state 20
    choice_instr                   shift and go to state 27
    labeled_instr                  shift and go to state 28
    continue_instr                 shift and go to state 26
    compound_instr                 shift and go to state 32
    instructions                   shift and go to state 35
    const                          shift and go to state 6
    break_instr                    shift and go to state 8
    expression                     shift and go to state 9
    while_instr                    shift and go to state 22
    instruction                    shift and go to state 34
    return_instr                   shift and go to state 23
    repeat_instr                   shift and go to state 33

state 5

    (9) declaration -> TYPE . inits ;
    (74) fundef -> TYPE . ID ( args_list_or_empty ) compound_instr
    (11) inits -> . inits , init
    (12) inits -> . init
    (13) init -> . ID = expression

    ID              shift and go to state 37

    inits                          shift and go to state 38
    init                           shift and go to state 36

state 6

    (47) expression -> const .

    ;               reduce using rule 47 (expression -> const .)
    +               reduce using rule 47 (expression -> const .)
    -               reduce using rule 47 (expression -> const .)
    *               reduce using rule 47 (expression -> const .)
    /               reduce using rule 47 (expression -> const .)
    %               reduce using rule 47 (expression -> const .)
    |               reduce using rule 47 (expression -> const .)
    &               reduce using rule 47 (expression -> const .)
    ^               reduce using rule 47 (expression -> const .)
    AND             reduce using rule 47 (expression -> const .)
    OR              reduce using rule 47 (expression -> const .)
    SHL             reduce using rule 47 (expression -> const .)
    SHR             reduce using rule 47 (expression -> const .)
    EQ              reduce using rule 47 (expression -> const .)
    NEQ             reduce using rule 47 (expression -> const .)
    >               reduce using rule 47 (expression -> const .)
    <               reduce using rule 47 (expression -> const .)
    LE              reduce using rule 47 (expression -> const .)
    GE              reduce using rule 47 (expression -> const .)
    ,               reduce using rule 47 (expression -> const .)
    )               reduce using rule 47 (expression -> const .)


state 7

    (35) while_instr -> WHILE . ( condition ) instruction
    (36) while_instr -> WHILE . ( error ) instruction

    (               shift and go to state 39


state 8

    (23) instruction -> break_instr .

    TYPE            reduce using rule 23 (instruction -> break_instr .)
    error           reduce using rule 23 (instruction -> break_instr .)
    PRINT           reduce using rule 23 (instruction -> break_instr .)
    ID              reduce using rule 23 (instruction -> break_instr .)
    IF              reduce using rule 23 (instruction -> break_instr .)
    WHILE           reduce using rule 23 (instruction -> break_instr .)
    REPEAT          reduce using rule 23 (instruction -> break_instr .)
    RETURN          reduce using rule 23 (instruction -> break_instr .)
    BREAK           reduce using rule 23 (instruction -> break_instr .)
    CONTINUE        reduce using rule 23 (instruction -> break_instr .)
    {               reduce using rule 23 (instruction -> break_instr .)
    (               reduce using rule 23 (instruction -> break_instr .)
    INTEGER         reduce using rule 23 (instruction -> break_instr .)
    FLOAT           reduce using rule 23 (instruction -> break_instr .)
    STRING          reduce using rule 23 (instruction -> break_instr .)
    $end            reduce using rule 23 (instruction -> break_instr .)
    UNTIL           reduce using rule 23 (instruction -> break_instr .)
    }               reduce using rule 23 (instruction -> break_instr .)
    ELSE            reduce using rule 23 (instruction -> break_instr .)


state 9

    (26) instruction -> expression . ;
    (48) expression -> expression . + expression
    (49) expression -> expression . - expression
    (50) expression -> expression . * expression
    (51) expression -> expression . / expression
    (52) expression -> expression . % expression
    (53) expression -> expression . | expression
    (54) expression -> expression . & expression
    (55) expression -> expression . ^ expression
    (56) expression -> expression . AND expression
    (57) expression -> expression . OR expression
    (58) expression -> expression . SHL expression
    (59) expression -> expression . SHR expression
    (60) expression -> expression . EQ expression
    (61) expression -> expression . NEQ expression
    (62) expression -> expression . > expression
    (63) expression -> expression . < expression
    (64) expression -> expression . LE expression
    (65) expression -> expression . GE expression

    ;               shift and go to state 48
    +               shift and go to state 54
    -               shift and go to state 52
    *               shift and go to state 40
    /               shift and go to state 44
    %               shift and go to state 58
    |               shift and go to state 55
    &               shift and go to state 51
    ^               shift and go to state 45
    AND             shift and go to state 56
    OR              shift and go to state 53
    SHL             shift and go to state 47
    SHR             shift and go to state 43
    EQ              shift and go to state 41
    NEQ             shift and go to state 42
    >               shift and go to state 46
    <               shift and go to state 49
    LE              shift and go to state 57
    GE              shift and go to state 50


state 10

    (44) const -> FLOAT .

    +               reduce using rule 44 (const -> FLOAT .)
    -               reduce using rule 44 (const -> FLOAT .)
    *               reduce using rule 44 (const -> FLOAT .)
    /               reduce using rule 44 (const -> FLOAT .)
    %               reduce using rule 44 (const -> FLOAT .)
    |               reduce using rule 44 (const -> FLOAT .)
    &               reduce using rule 44 (const -> FLOAT .)
    ^               reduce using rule 44 (const -> FLOAT .)
    AND             reduce using rule 44 (const -> FLOAT .)
    OR              reduce using rule 44 (const -> FLOAT .)
    SHL             reduce using rule 44 (const -> FLOAT .)
    SHR             reduce using rule 44 (const -> FLOAT .)
    EQ              reduce using rule 44 (const -> FLOAT .)
    NEQ             reduce using rule 44 (const -> FLOAT .)
    >               reduce using rule 44 (const -> FLOAT .)
    <               reduce using rule 44 (const -> FLOAT .)
    LE              reduce using rule 44 (const -> FLOAT .)
    GE              reduce using rule 44 (const -> FLOAT .)
    ;               reduce using rule 44 (const -> FLOAT .)
    ,               reduce using rule 44 (const -> FLOAT .)
    )               reduce using rule 44 (const -> FLOAT .)


state 11

    (5) block -> fundef .

    TYPE            reduce using rule 5 (block -> fundef .)
    error           reduce using rule 5 (block -> fundef .)
    PRINT           reduce using rule 5 (block -> fundef .)
    ID              reduce using rule 5 (block -> fundef .)
    IF              reduce using rule 5 (block -> fundef .)
    WHILE           reduce using rule 5 (block -> fundef .)
    REPEAT          reduce using rule 5 (block -> fundef .)
    RETURN          reduce using rule 5 (block -> fundef .)
    BREAK           reduce using rule 5 (block -> fundef .)
    CONTINUE        reduce using rule 5 (block -> fundef .)
    {               reduce using rule 5 (block -> fundef .)
    (               reduce using rule 5 (block -> fundef .)
    INTEGER         reduce using rule 5 (block -> fundef .)
    FLOAT           reduce using rule 5 (block -> fundef .)
    STRING          reduce using rule 5 (block -> fundef .)
    $end            reduce using rule 5 (block -> fundef .)


state 12

    (6) block -> instruction .

    TYPE            reduce using rule 6 (block -> instruction .)
    error           reduce using rule 6 (block -> instruction .)
    PRINT           reduce using rule 6 (block -> instruction .)
    ID              reduce using rule 6 (block -> instruction .)
    IF              reduce using rule 6 (block -> instruction .)
    WHILE           reduce using rule 6 (block -> instruction .)
    REPEAT          reduce using rule 6 (block -> instruction .)
    RETURN          reduce using rule 6 (block -> instruction .)
    BREAK           reduce using rule 6 (block -> instruction .)
    CONTINUE        reduce using rule 6 (block -> instruction .)
    {               reduce using rule 6 (block -> instruction .)
    (               reduce using rule 6 (block -> instruction .)
    INTEGER         reduce using rule 6 (block -> instruction .)
    FLOAT           reduce using rule 6 (block -> instruction .)
    STRING          reduce using rule 6 (block -> instruction .)
    $end            reduce using rule 6 (block -> instruction .)


state 13

    (41) compound_instr -> { . declarations instructions }
    (7) declarations -> . declarations declaration
    (8) declarations -> .

    TYPE            reduce using rule 8 (declarations -> .)
    error           reduce using rule 8 (declarations -> .)
    PRINT           reduce using rule 8 (declarations -> .)
    ID              reduce using rule 8 (declarations -> .)
    IF              reduce using rule 8 (declarations -> .)
    WHILE           reduce using rule 8 (declarations -> .)
    REPEAT          reduce using rule 8 (declarations -> .)
    RETURN          reduce using rule 8 (declarations -> .)
    BREAK           reduce using rule 8 (declarations -> .)
    CONTINUE        reduce using rule 8 (declarations -> .)
    {               reduce using rule 8 (declarations -> .)
    (               reduce using rule 8 (declarations -> .)
    INTEGER         reduce using rule 8 (declarations -> .)
    FLOAT           reduce using rule 8 (declarations -> .)
    STRING          reduce using rule 8 (declarations -> .)

    declarations                   shift and go to state 59

state 14

    (29) labeled_instr -> ID . : instruction
    (30) assignment -> ID . = expression ;
    (46) expression -> ID .
    (68) expression -> ID . ( expr_list_or_empty )
    (69) expression -> ID . ( error )

    :               shift and go to state 62
    =               shift and go to state 61
    ;               reduce using rule 46 (expression -> ID .)
    +               reduce using rule 46 (expression -> ID .)
    -               reduce using rule 46 (expression -> ID .)
    *               reduce using rule 46 (expression -> ID .)
    /               reduce using rule 46 (expression -> ID .)
    %               reduce using rule 46 (expression -> ID .)
    |               reduce using rule 46 (expression -> ID .)
    &               reduce using rule 46 (expression -> ID .)
    ^               reduce using rule 46 (expression -> ID .)
    AND             reduce using rule 46 (expression -> ID .)
    OR              reduce using rule 46 (expression -> ID .)
    SHL             reduce using rule 46 (expression -> ID .)
    SHR             reduce using rule 46 (expression -> ID .)
    EQ              reduce using rule 46 (expression -> ID .)
    NEQ             reduce using rule 46 (expression -> ID .)
    >               reduce using rule 46 (expression -> ID .)
    <               reduce using rule 46 (expression -> ID .)
    LE              reduce using rule 46 (expression -> ID .)
    GE              reduce using rule 46 (expression -> ID .)
    (               shift and go to state 60


state 15

    (10) declaration -> error . ;

    ;               shift and go to state 63


state 16

    (40) break_instr -> BREAK . ;

    ;               shift and go to state 64


state 17

    (2) blocks -> blocks block .

    TYPE            reduce using rule 2 (blocks -> blocks block .)
    error           reduce using rule 2 (blocks -> blocks block .)
    PRINT           reduce using rule 2 (blocks -> blocks block .)
    ID              reduce using rule 2 (blocks -> blocks block .)
    IF              reduce using rule 2 (blocks -> blocks block .)
    WHILE           reduce using rule 2 (blocks -> blocks block .)
    REPEAT          reduce using rule 2 (blocks -> blocks block .)
    RETURN          reduce using rule 2 (blocks -> blocks block .)
    BREAK           reduce using rule 2 (blocks -> blocks block .)
    CONTINUE        reduce using rule 2 (blocks -> blocks block .)
    {               reduce using rule 2 (blocks -> blocks block .)
    (               reduce using rule 2 (blocks -> blocks block .)
    INTEGER         reduce using rule 2 (blocks -> blocks block .)
    FLOAT           reduce using rule 2 (blocks -> blocks block .)
    STRING          reduce using rule 2 (blocks -> blocks block .)
    $end            reduce using rule 2 (blocks -> blocks block .)


state 18

    (27) print_instr -> PRINT . expr_list ;
    (28) print_instr -> PRINT . error ;
    (72) expr_list -> . expr_list , expression
    (73) expr_list -> . expression
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    error           shift and go to state 68
    ID              shift and go to state 67
    (               shift and go to state 19
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 10
    STRING          shift and go to state 30

    const                          shift and go to state 6
    expression                     shift and go to state 66
    expr_list                      shift and go to state 65

state 19

    (66) expression -> ( . expression )
    (67) expression -> ( . error )
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    error           shift and go to state 70
    ID              shift and go to state 67
    (               shift and go to state 19
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 10
    STRING          shift and go to state 30

    const                          shift and go to state 6
    expression                     shift and go to state 69

state 20

    (16) instruction -> print_instr .

    TYPE            reduce using rule 16 (instruction -> print_instr .)
    error           reduce using rule 16 (instruction -> print_instr .)
    PRINT           reduce using rule 16 (instruction -> print_instr .)
    ID              reduce using rule 16 (instruction -> print_instr .)
    IF              reduce using rule 16 (instruction -> print_instr .)
    WHILE           reduce using rule 16 (instruction -> print_instr .)
    REPEAT          reduce using rule 16 (instruction -> print_instr .)
    RETURN          reduce using rule 16 (instruction -> print_instr .)
    BREAK           reduce using rule 16 (instruction -> print_instr .)
    CONTINUE        reduce using rule 16 (instruction -> print_instr .)
    {               reduce using rule 16 (instruction -> print_instr .)
    (               reduce using rule 16 (instruction -> print_instr .)
    INTEGER         reduce using rule 16 (instruction -> print_instr .)
    FLOAT           reduce using rule 16 (instruction -> print_instr .)
    STRING          reduce using rule 16 (instruction -> print_instr .)
    $end            reduce using rule 16 (instruction -> print_instr .)
    UNTIL           reduce using rule 16 (instruction -> print_instr .)
    }               reduce using rule 16 (instruction -> print_instr .)
    ELSE            reduce using rule 16 (instruction -> print_instr .)


state 21

    (38) return_instr -> RETURN . expression ;
    (46) expression -> . ID
    (47) expression -> . const
    (48) expression -> . expression + expression
    (49) expression -> . expression - expression
    (50) expression -> . expression * expression
    (51) expression -> . expression / expression
    (52) expression -> . expression % expression
    (53) expression -> . expression | expression
    (54) expression -> . expression & expression
    (55) expression -> . expression ^ expression
    (56) expression -> . expression AND expression
    (57) expression -> . expression OR expression
    (58) expression -> . expression SHL expression
    (59) expression -> . expression SHR expression
    (60) expression -> . expression EQ expression
    (61) expression -> . expression NEQ expression
    (62) expression -> . expression > expression
    (63) expression -> . expression < expression
    (64) expression -> . expression LE expression
    (65) expression -> . expression GE expression
    (66) expression -> . ( expression )
    (67) expression -> . ( error )
    (68) expression -> . ID ( expr_list_or_empty )
    (69) expression -> . ID ( error )
    (43) const -> . INTEGER
    (44) const -> . FLOAT
    (45) const -> . STRING

    ID              shift and go to state 67
    (               shift and go to state 19
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 10
    STRING          shift and go to state 30

    const                          shift and go to state 6
    expression                     shift and go to state 71

state 22

    (20) instruction -> while_instr .

    TYPE            reduce using rule 20 (instruction -> while_instr .)
    error           reduce using rule 20 (instruction -> while_instr .)
    PRINT           reduce using rule 20 (instruction -> while_instr .)
    ID              reduce using rule 20 (instruction -> while_instr .)
    IF              reduce using rule 20 (instruction -> while_instr .)
    WHILE           reduce using rule 20 (instruction -> while_instr .)
    REPEAT          reduce using rule 20 (instruction -> while_instr .)
    RETURN          reduce using rule 20 (instruction -> while_instr .)
    BREAK           reduce using rule 20 (instruction -> while_instr .)
    CONTINUE        reduce using rule 20 (instruction -> while_instr .)
    {               reduce using rule 20 (instruction -> while_instr .)
    (               reduce using rule 20 (instruction -> while_instr .)
    INTEGER         reduce using rule 20 (instruction -> while_instr .)
    FLOAT           reduce using rule 20 (instruction -> while_instr .)
    STRING          reduce using rule 20 (instruction -> while_instr .)
    $end            reduce using rule 20 (instruction -> while_instr .)
    UNTIL           reduce using rule 20 (instruction -> while_instr .)
    }               reduce using rule 20 (instruction -> while_instr .)
    ELSE            reduce using rule 20 (instruction -> while_instr .)


state 23

    (22) instruction -> return_instr .

    TYPE            reduce using rule 22 (instruction -> return_instr .)
    error           reduce using rule 22 (instruction -> return_instr .)
    PRINT           reduce using rule 22 (instruction -> return_instr .)
    ID              reduce using rule 22 (instruction -> return_instr .)
    IF              reduce using rule 22 (instruction -> return_instr .)
    WHILE           reduce using rule 22 (instruction -> return_instr .)
    REPEAT          reduce using rule 22 (instruction -> return_instr .)
    RETURN          reduce using rule 22 (instruction -> return_instr .)
    BREAK           reduce using rule 22 (instruction -> return_instr .)
    CONTINUE        reduce using rule 22 (instruction -> return_instr .)
    {               reduce using rule 22 (instruction -> return_instr .)
    (               reduce using rule 22 (instruction -> return_instr .)
    INTEGER         reduce using rule 22 (instruction -> return_instr .)
    FLOAT           reduce using rule 22 (instruction -> return_instr .)
    STRING          reduce using rule 22 (instruction -> return_instr .)
    $end            reduce using rule 22 (instruction -> return_instr .)
    UNTIL           reduce using rule 22 (instruction -> return_instr .)
    }               reduce using rule 22 (instruction -> return_instr .)
    ELSE            reduce using rule 22 (instruction -> return_instr .)


state 24

    (18) instruction -> assignment .
